--- a/app/views/common_ingredients/show.html.slim
+++ b/app/views/common_ingredients/show.html.slim
@@ -15,7 +15,7 @@ div
 
   .grid.grid-cols-3.gap-4.mt-4
     - @ingredient.recipes.created_by(current_user).each do |recipe|
-      = render "recipes/recipe_card", recipe:, class: "h-full"
+      = render "recipes/recipe_card", recipe:, class: "h-full", published: false
 
   = heading("sdílené recepty se surovinou", :h2)
   .grid.grid-cols-3.gap-4.mt-4
