Make recipe card clickable

--- a/app/components/card_component.html.slim
+++ b/app/components/card_component.html.slim
@@ -1,5 +1,5 @@
 .bg-white.rounded-xl.border.border-black.border-1.p-4.mb-2 class="#{classes}"
-  .text-2xl.mb-2.empty:hidden data-turbo="false"
+  .text-2xl.mb-2.empty:hidden
     = heading || name
 
   .mt-1.empty:hidden
