--- a/app/views/recipes/_recipe_card.html.slim
+++ b/app/views/recipes/_recipe_card.html.slim
@@ -1,10 +1,12 @@
 /# locals: (recipe:, class: "", published: true)
 
-= turbo_frame_tag dom_id(recipe)
+- path_to_recipe = published ? published_recipe_path(id: recipe.id) : recipe_path(recipe)
+
+= turbo_frame_tag dom_id(recipe), data: { "controller": "clickable", "clickable-url-value": path_to_recipe }
     = render CardComponent.new(recipe, class:) do |card|
         = card.with_heading do
             .grid.grid-cols-2
-                = link_to(recipe.name, published ? published_recipe_path(id: recipe.id) : recipe, data: { turbo_frame: "_top" })
+                = link_to(recipe.name, path_to_recipe, data: { turbo_frame: "_top" })
                 .text-right
                     - if recipe.liked_by?(current_user)
                         = button_to liked_recipe_path(recipe), method: :delete, class: "inline-block" do
