--- a/app/views/recipes/index.html.slim
+++ b/app/views/recipes/index.html.slim
@@ -8,13 +8,17 @@
   = searchbox(placeholder: placeholder, path: recipes_path, target_turbo_frame: :recipes)
 
 = turbo_frame_tag :recipes
-  = table @recipes do |t|
-    = t.column :recept do |recipe|
-      = link_to recipe.name, recipe, class: "font-bold text-emerald-600", data: { turbo_frame: "_top" }
-      = " (rozpracováno)" if recipe.draft?
-    = t.column :kategorie do |recipe|
-      = recipe.category&.name
-    = t.column :specifika do |recipe|
-      - recipe.labels.each do |label|
-        = label_badge(label, class: "text-black")
-    = t.pager @pagy
+  - @recipes.group_by(&:owner).each do |group|
+    = heading(group.first.to_s == current_user.name.to_s ? "moje recepty" : group.first, :h2)
+    = table group.second do |t|
+      = t.column "recept" do |recipe|
+        = link_to recipe.name, recipe, class: "font-bold text-emerald-600", data: { turbo_frame: "_top" }
+        = " (rozpracováno)" if recipe.draft?
+      = t.column "vlastní" do |recipe|
+        = recipe.owner.name
+      = t.column "kategorie" do |recipe|
+        = recipe.category&.name
+      = t.column "specifika" do |recipe|
+        - recipe.labels.each do |label|
+          = label_badge(label, class: "text-black")
+      = t.pager @pagy
