--- a/app/views/event_shopping_lists/show.html.slim
+++ b/app/views/event_shopping_lists/show.html.slim
@@ -1,5 +1,5 @@
 h1.text-2xl.font-bold nákupy na #{@event.name}
-= button_link_to nil, @event, type: :secondary, class: "group" do
+= button_link_to nil, event_path(@event), type: :secondary, class: "group" do
   = svg("left-caret", class: "group-hover:fill-current group-hover:text-white")
   = "zpět na akci"
 
@@ -12,7 +12,7 @@ h1.text-2xl.font-bold nákupy na #{@event.name}
         th.jídlo
         th.množství
     tbody
-    - shopping.ingredients_with_usage.group_by {|i| i.first.category }.each do |category, ingredients_with_usage|
+    - shopping.ingredients_with_usage.group_by { |i| i.first.category }.each do |category, ingredients_with_usage|
       tr.pe-12
         td
           h4.text-lg.font-bold = category&.name || "nezařazené"
