--- a/app/views/published_recipes/index.html.slim
+++ b/app/views/published_recipes/index.html.slim
@@ -1,5 +1,6 @@
 - content_for :title, "sdílené recepty"
 
+span.italic = "Hurá, máme už #{Recipe.published.size} sdílených receptů!"
 .mb-6
   - placeholder = Recipe.published.order("RAND()").limit(1).first&.name
   = default_form_for "", url: published_recipes_path, method: :get, html: { id: "published-recipes-index-form", data: { "controller": "form", "turbo-frame": "published_recipes" } } do |f|
