Improve mobile public navbar

--- a/app/views/shared/_navbar_link.html.slim
+++ b/app/views/shared/_navbar_link.html.slim
@@ -1,6 +1,4 @@
-- classes = local_assigns[:classes] || ""
-- icon = local_assigns[:icon] || nil
-- text = local_assigns[:text] || nil
+/# locals: (link:, classes: "", icon: nil, text: nil)
 
 a href=link class=classes
     li.rounded-md.py-2.px-2.hover:bg-ocean-400
