--- a/app/views/shared/_public_navbar.html.slim
+++ b/app/views/shared/_public_navbar.html.slim
@@ -1,9 +1,22 @@
 nav.mb-4
-  .flex.flex-wrap.items-center.py-3.px-4.mx-auto.bg-ocean-800
+  .flex.flex-wrap.items-center.md:py-3.px-4.mx-auto.bg-ocean-800
     a href="/"
       / img.h-12.mr-1 src=image_url("logos/logo.png") alt="navarit"
 
-    ul.flex.font-medium.ms-2.ps-4.cursor-pointer.md:p-0.border.border-gray-100.rounded-lg.md:flex-row.md:space-x-8.md:mt-0.md:border-0.dark:bg-gray-800.md:dark:bg-gray-900.dark:border-gray-700
+    / Desktop
+    ul.font-medium.md:ms-2.md:ps-4.p-0.rounded-lg.md:space-x-8.md:mt-0.hidden.md:flex
+      = render "shared/navbar_link", link: root_path, text: "domů"
       = render "shared/navbar_link", link: new_user_session_path, text: "přihlásit se"
       = render "shared/navbar_link", link: new_user_registration_path, text: "registrovat se"
-      = render "shared/navbar_link", link: published_recipes_path, icon: "book-open", text: "databáze receptů"
+      = render "shared/navbar_link", link: published_recipes_path, icon: "book-open", text: "recepty"
+
+    / Mobile - not great, but good enough for now
+    ul.grid.grid-cols-12.gap-2.md:hidden
+      .col-span-3
+        = render "shared/navbar_link", link: root_path, text: "domů"
+      .col-span-3
+        = render "shared/navbar_link", link: new_user_session_path, text: "přihlásit se"
+      .col-span-3
+        = render "shared/navbar_link", link: new_user_registration_path, text: "registrovat se"
+      .col-span-3
+        = render "shared/navbar_link", link: published_recipes_path, icon: "book-open", text: "recepty"
