--- a/app/views/published_events/show.html.slim
+++ b/app/views/published_events/show.html.slim
@@ -18,8 +18,8 @@
         - day_dom_id = daily_plan.present? ? dom_id(day.daily_plan) : nil
         - border_color_class = daily_plan.present? ? "border-emerald-600" : "border-gray-300"
 
-        div.border.border-2.rounded-xl.shadow.text-center id="#{day_dom_id}-card" class=border_color_class
-            div.text-xl.mt-2
+        .border.border-2.rounded-xl.shadow.text-center id="#{day_dom_id}-card" class=border_color_class
+            .text-xl.mt-2
                 - if daily_plan.present?
                     = link_to daily_plan_path(daily_plan), class: "hover:font-bold hover:text-emerald-700" do
                         = weekday_name(day.date)
@@ -29,7 +29,7 @@
                 p.italic.text-sm = formatted_date(day.date)
 
             - if daily_plan.present?
-                div.overflow-hidden.mb-3 id="#{day_dom_id}-recipes"
+                .mb-3 id="#{day_dom_id}-recipes"
                     ul.space-y-2.first:mt-2.last:mb-3
                         - daily_plan.daily_plan_recipes.each do |daily_recipe|
                             li.overflow-hidden.p-2.m-2.border.border-emerald-700.rounded.shadow
@@ -38,12 +38,9 @@
             - if day.tasks.any?
                 hr
 
-            div.overflow-hidden id="#{day_dom_id}-tasks"
+            div id="#{day_dom_id}-tasks"
                 - day.tasks.each do |task|
                     span.italic.overflow-hidden.truncate
                         = task.name
 
                     br
-
-
-= button_link_to "nákupní seznam", event_shopping_list_path(@event)
