Add RoRvsWild to frontend too, don't log health checks

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,6 +17,10 @@ html
     = combobox_style_tag
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.turbo.min.js"></script>
 
+    <script src="https://cdn.rorvswild.com/agent.js"></script>
+    javascript:
+      RorVsWild.start({apiKey: "jeBhfs-lT8fDy-KTX0WI"})
+
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/trix@2.0.0/dist/trix.css">
     <script type="text/javascript" src="https://unpkg.com/trix@2.0.0/dist/trix.umd.min.js"></script>
 
