--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,6 +45,10 @@ a {
   background-color: darkgreen;
 }
 
+.badge-shadow {
+  box-shadow: 0 0.1rem 0 0px rgba(0, 0, 0, 0.15);
+}
+
 .card-shadow:hover {
   box-shadow: 0 0.2rem 0 0px rgba(0, 0, 0, 0.25);
 }
