--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -1,7 +1,7 @@
 .rounded-md.border-red-600.border-2.p-8.m-4.text-xl.bg-gradient-to-r.from-red-400.to-red-200
     = icon(:warning_circle)
     p
-        | Dostali jste se novou verzi aplikace
+        | Dostali jste na se novou verzi aplikace
         em.font-bold = " navařit "
         | (dříve skautská kuchařka).
     p
