Add button_to :dangerous component to preview

--- a/test/components/previews/button_link_component_preview/buttons.html.slim
+++ b/test/components/previews/button_link_component_preview/buttons.html.slim
@@ -3,7 +3,7 @@ h1 Using components
 = render Buttons::ButtonLinkComponent.new(name: "normal", path: "#")
 = render Buttons::ButtonLinkComponent.new(name: "secondary", path: "#", type: :secondary)
 = render Buttons::ButtonLinkComponent.new(name: "plain", path: "#", type: :plain)
-/ = render Buttons::ButtonLinkComponent.new(name: "delete!", path: "#", type: :dangerous)
+= render Buttons::ButtonLinkComponent.new(name: "delete!", path: "#", type: :dangerous)
 
 h1 Using helpers
 
