--- a/app/views/dashboards/show.html.slim
+++ b/app/views/dashboards/show.html.slim
@@ -1,7 +1,7 @@
 - content_for :title, "nástěnka"
 
 - @header_class = "mt-6"
-- content_for :header, "vítej ve Skautské kuchařce"
+- content_for :header, "vítej!"
 
 .sm:grid.sm:grid-cols-3
     .mt-8.flex.justify-between.group
