--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -10,7 +10,7 @@
     p
         | Pokud budete něco dělat na tomto webu, během pár dní o to přijdete!
 
-h1.text-4xl.text-center.mt-4.mb-4 skautská kuchařka
+h1.text-4xl.text-center.mt-4.mb-4 navařit
 
 .text-center
     | tvůj pomocník při vaření pro hodně lidí.
