--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -53,7 +53,7 @@
         = "další možnosti"
 
       div id="eventMoreOptionsDropdown" class="z-10 hidden bg-white rounded-lg shadow"
-        ul class="p-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="eventMoreOptionsDropdown"
+        ul class="align-left p-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="eventMoreOptionsDropdown"
           li = button_link_to "zkopírovat akci", new_event_duplication_path(event_id: @event.id), type: :plain, icon: :plus
           - if can? :update, @event
             li = button_link_to "upravit", edit_event_path(@event), type: :plain
