Improve styling of event page

--- a/app/views/events/_day_card.html.slim
+++ b/app/views/events/_day_card.html.slim
@@ -3,7 +3,7 @@
 - daily_plan = day.daily_plan.presence
 - day_dom_id = daily_plan.present? ? dom_id(day.daily_plan) : nil
 
-.group id="#{day_dom_id}-card" class="#{daily_plan.present? ? "bg-peach-200" : "bg-peach-100 hidden md:inline"}"
+.group id="#{day_dom_id}-card" class="#{daily_plan.present? ? "bg-gravel-200" : "bg-gravel-100 hidden md:inline"}"
   .text-xl.mt-2.ps-2
     - if daily_plan.present?
       = link_to daily_plan_path(daily_plan), class: "hover:font-bold hover:text-ocean-700", data: { turbo_frame: "modal" } do
@@ -22,6 +22,6 @@
           = render "day_recipe", daily_recipe:
 
       - if can? :update, daily_plan
-        ul
+        ul.mt-2
           li.px-3.invisible.group-hover:visible
-            = button_link_to "přidat recept", daily_plan_path(daily_plan), icon: :plus, type: :secondary, data: { turbo_frame: "modal" }
+            = button_link_to "přidat jídlo", daily_plan_path(daily_plan), icon: :plus, type: :plain, data: { turbo_frame: "modal" }, class: "border-none hover:bg-ocean-200 py-3"
