--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,8 +45,14 @@ a {
   background-color: darkgreen;
 }
 
+.card-shadow {
+  box-shadow: 0 0.15rem 0 0px rgba(0, 0, 0, 0.25);
+  border: solid 0.1rem transparent;
+}
+
 .card-shadow:hover {
   box-shadow: 0 0.2rem 0 0px rgba(0, 0, 0, 0.25);
+  border: solid 0.1rem rgba(0, 0, 0, 0.25);
 }
 
 /* This hides stepper on number input */
