--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,11 +46,21 @@ a {
 }
 
 .card-shadow {
+  /* box-shadow: 0 0.15rem 0 0px rgba(0, 0, 0, 0.25); */
+  border: solid 0.1rem rgba(0, 0, 0, 0.25);
+}
+
+.card-shadow:hover {
+  box-shadow: 0 0.25rem 0 0px rgba(0, 0, 0, 0.25);
+  border: solid 0.1rem rgba(0, 0, 0, 0.25);
+}
+
+.recipe-card-shadow {
   box-shadow: 0 0.15rem 0 0px rgba(0, 0, 0, 0.25);
   border: solid 0.1rem transparent;
 }
 
-.card-shadow:hover {
+.recipe-card-shadow:hover {
   box-shadow: 0 0.2rem 0 0px rgba(0, 0, 0, 0.25);
   border: solid 0.1rem rgba(0, 0, 0, 0.25);
 }
