--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,14 +1,24 @@
-.text-center.mt-5
+.text-center.mt-5.content-center
   h1.text-2xl.font-bold
     = t("sign_up")
 
-  = default_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |form|
-    = form.input :email, required: true, autofocus: true, col_span: :full, input_html: { autocomplete: "email" }
-    = form.input :password, required: true, col_span: :full, hint: ("minimálně #{@minimum_password_length} znaků" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" }
-    = form.input :password_confirmation, required: true, col_span: :full, input_html: { autocomplete: "new-password" }
-    .block.content-center.col-span-full
-      = form.button :submit, t("sign_up"), class: "w-1/2 py-5"
+  .mb-8
+    = default_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |form|
+      .hidden.md:block.md:col-span-3
+      = form.input :email, required: true, autofocus: true, col_span: 6, input_html: { autocomplete: "email" }
+      .hidden.md:block.md:col-span-3
 
-.mt-4
-  = render "devise/shared/links"
+      .hidden.md:block.md:col-span-3
+      = form.input :password, required: true, col_span: 6, hint: ("minimálně #{@minimum_password_length} znaků" if @minimum_password_length),
+                  input_html: { autocomplete: "new-password" }
+      .hidden.md:block.md:col-span-3
+
+      .hidden.md:block.md:col-span-3
+      = form.input :password_confirmation, required: true, col_span: 6, input_html: { autocomplete: "new-password" }
+      .hidden.md:block.md:col-span-3
+
+      .block.content-center.col-span-full
+        = form.button :submit, t("sign_up"), class: "w-1/2 py-5"
+
+  div
+    = render "devise/shared/links"
