Honor permissions in visualization a bit more

--- a/app/views/daily_plans/_show_daily_plan.html.slim
+++ b/app/views/daily_plans/_show_daily_plan.html.slim
@@ -26,4 +26,4 @@
         = form.input :portion_count, col_span: 2
         = form.submit "přidat", col_span: 2
 
-= render "tasks", daily_plan: daily_plan
+= render "tasks", daily_plan:
