--- a/app/views/events/_day_task_card.html.slim
+++ b/app/views/events/_day_task_card.html.slim
@@ -6,7 +6,7 @@ ruby:
   border_color_class = daily_plan.present? ? "bg-gravel-200" : "bg-gravel-100"
   border_color_class += " hidden md:inline" unless daily_plan.present?
 
-.border-b.border-gray-400.last:rounded-br-xl.pb-5 id="#{day_dom_id}-tasks" class="#{"md:border-t border-gray-400" if daily_plan.present?} #{border_color_class} #{classes}" style="position: relative;"
+.day-task-card.border-b.border-gray-400.pb-5 id="#{day_dom_id}-tasks" class="#{"md:border-t border-gray-400" if daily_plan.present?} #{border_color_class} #{classes}" style="position: relative;"
   - if daily_plan.present?
     - if day.date == day.daily_plan.event.begins_at.to_date || day.date.wday == 1
       h2.text-lg.bg-gravel-200.px-2.invisible.md:visible style="position: absolute; top: -1.4rem; left: 1rem;"
